--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="wisdom-pets/index.html">Wisdom Pets</a></li>
-            <li><a class="dropdown-item" href="#">Additional Challenge</a></li>
+            <li><a class="dropdown-item" href="Additional-challenge.html">Additional Challenge</a></li>
             <li><a class="dropdown-item" href="#">Supplemental Tutorial One</a></li>
           </ul>
         </li>
