--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="wisdom-pets/index.html">Wisdom Pets</a></li>
             <li><a class="dropdown-item" href="Additional-challenge/index.html">Additional Challenge</a></li>
-            <li><a class="dropdown-item" href="#">Supplemental Tutorial One</a></li>
+            <li><a class="dropdown-item" href="BootstrapOne/index.html">Supplemental Tutorial One</a></li>
           </ul>
         </li>
         
