--- a/BootstrapOne/index.html
+++ b/BootstrapOne/index.html
@@ -32,9 +32,9 @@
             Research
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="research/research1.html">Current: Child-Computer Interaction</a></li>
+            <li><a class="dropdown-item" href="research/research2.html">Current: Accessibility</a></li>
+            <li><a class="dropdown-item" href="research/research3.html">Archived: People with Autism</a></li>
           </ul>
         </li>
         <li class="nav-item">
