--- a/BootstrapOne/design/design.html
+++ b/BootstrapOne/design/design.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Michelle Johnson</a>
+    <a class="navbar-brand" href="../index.html">Michelle Johnson</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -96,7 +96,7 @@
       </div>
       <div class="modal-body">
         <video controls width="320" height="240">
-          <source src="../imgs/media/IsabelleRun.mp4" type="video/mp4/">
+          <source src="../imgs/media/IsabelleRun.mp4" type="video/mp4">
      </video>
       </div>
       <div class="modal-footer">
