--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a class="dropdown-item" href="wisdom-pets/index.html">Wisdom Pets</a></li>
             <li><a class="dropdown-item" href="Additional-challenge/index.html">Additional Challenge</a></li>
             <li><a class="dropdown-item" href="BootstrapOne/index.html">Supplemental Tutorial One</a></li>
+            <li><a class="dropdown-item" href="typo-hierarchy/index.html">Typographical Hierarchy</a></li>
           </ul>
         </li>
         
