--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a class="dropdown-item" href="Additional-challenge/index.html">Additional Challenge</a></li>
             <li><a class="dropdown-item" href="BootstrapOne/index.html">Supplemental Tutorial One</a></li>
             <li><a class="dropdown-item" href="typo-hierarchy/index.html">Typographical Hierarchy</a></li>
+            <li><a class="dropdown-item" href="animate-tutorial/index.html">Animate Tutorial</a></li>
           </ul>
         </li>
         
