--- a/logo/index.html
+++ b/logo/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/logo.css">
-    <link rel="icon" href="../images/favicon1.png"> 
+    <link rel="icon" href="images/favicon1.png"> 
 
     <title>Logos</title>
   </head>
