--- a/logo/index.html
+++ b/logo/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/logo.css">
     <link rel="icon" href="images/favicon1.png"> 
 
-    <title>Logos</title>
+    <title>Michelle Ruby Johnson Logos</title>
   </head>
   <body>
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
