--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <li><a class="dropdown-item" href="BootstrapOne/index.html">Supplemental Tutorial One</a></li>
             <li><a class="dropdown-item" href="typo-hierarchy/index.html">Typographical Hierarchy</a></li>
             <li><a class="dropdown-item" href="animate-tutorial/index.html">Animate Tutorial</a></li>
-            <li><a class="dropdown-item" href="logo/index.html">Logos</a></li>            
+            <li><a class="dropdown-item" href="logo/index.html">Logos</a></li>
+            <li><a class="dropdown-item" href="microinteractions/index.html">Microinteraction</a></li>                  
           </ul>
         </li>
         
