--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <li><a class="dropdown-item" href="typo-hierarchy/index.html">Typographical Hierarchy</a></li>
             <li><a class="dropdown-item" href="animate-tutorial/index.html">Animate Tutorial</a></li>
             <li><a class="dropdown-item" href="logo/index.html">Logos</a></li>
-            <li><a class="dropdown-item" href="microinteractions/index.html">Microinteraction</a></li>                  
+            <li><a class="dropdown-item" href="microinteractions/index.html">Microinteraction</a></li>
+            <li><a class="dropdown-item" href="mj_designsystem/index.html">Design System</a></li>    
           </ul>
         </li>
         
