--- a/mj_designsystem/patterns/homepage_grid.html
+++ b/mj_designsystem/patterns/homepage_grid.html
@@ -4,6 +4,11 @@
   	<title>cyPutnam_DesignSystemExample_Index</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="../img/favicon.png"> 
 
     <!-- This is where you put your google font in if applicable -->
 <!--     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet"> -->
