--- a/mj_designsystem/patterns/homepage_mobile.html
+++ b/mj_designsystem/patterns/homepage_mobile.html
@@ -7,6 +7,11 @@
 
     <!-- This is where you put your google font in if applicable -->
 <!--     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="../img/favicon.png"> 
+
 
 <!-- This is the link to the toggle hamburger -->
 	 <link rel="stylesheet" href="../css/bootstrap.min.css">
