--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <li><a class="dropdown-item" href="animate-tutorial/index.html">Animate Tutorial</a></li>
             <li><a class="dropdown-item" href="logo/index.html">Logos</a></li>
             <li><a class="dropdown-item" href="microinteractions/index.html">Microinteraction</a></li>
-            <li><a class="dropdown-item" href="mj_designsystem/index.html">Design System</a></li>    
+            <li><a class="dropdown-item" href="mj_designsystem/index.html">Design System</a></li>
+            <li><a class="dropdown-item" href="mj_portfolio/index.html">Portfolio</a></li> 
           </ul>
         </li>
         
